Pkgsrc 19.4.0 has BDB 4.8, 5.3 and 6.2.

TODO: Implement PEP 384 (Stable API)
TODO: Implement promises done in 18.1.0-pre changelog.
TODO: Oracle has examples and multiple documentation. Link to them.
PENDING: Documentation, website, mailing list update.


18.1.2 - :
  * Export exception "DBMetaChksumFail" (from error "DB_META_CHKSUM_FAIL") if
    running Oracle Berkeley DB version 6.2 or newer.

  * Support HEAP access method if you are linking against Oracle Berkeley DB
    5.3 or newer.

    - Implement, test and document "DB.get_heapsize()", "DB.set_heapsize()",
      "DB.get_heap_regionsize()" and "DB.set_heap_regionsize()".

    - Export exception "DBHeapFull" (from error "DB_HEAP_FULL").

    - "DB.stats()" provides stats for heap databases.

  * WARNING - BREAKING CHANGE: Add "dbtype" member in "DBObject" object in the
    C API. Increase C API version. This change has ripple effect in the code.

  * WARNING - BREAKING CHANGE: "primaryDBType" member in "DBObject" object in
    the C API is now type "DBTYPE". Increase C API version. This change has
    ripple effect in the code.

  * Now "DB.get_type()" can be called anytime and it doesn't raise an exception
    if called before the database is open. If the database type is not known,
    "DB_UNKNOWN" is returned. This is a deviation from the Oracle Berkeley DB C
    API.

  * WARNING - BREAKING CHANGE: "DB.type()" method is dropped. It was never
    documented. Use "DB.get_type()".

  * "DB.stats()" returns new keys in the dictionary:

    - Hash, Btree and Recno access methods: Added "metaflags" (always) and
      "ext_files" (if linked against Oracle Berkeley DB 6.2 or newer).

    - Queue access method: Added "metaflags" (always).

18.1.1 - 2020-12-01:
  * If you try to install this library in an unsupported Python
    environment, instruct the user about how to install legacy "bsddb3"
    library.

  * Expose DBSite object in the C API. Increase C API version.
